--- a/index.html
+++ b/index.html
@@ -15,34 +15,57 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <header class="main-header">
-        <nav>
-          <div class="nav-head">
-            <div class="logo">Header Logo</div>
-            <div>header link one</div>
-            <div>header link two</div>
-            <div>header link three</div>
-          </div>
-        </nav>
-        <section class="main-body">
-          <div class="main-div">
-            <div>
-              <h2 class="head-1">This website is awesome</h2>
+    < class="container">
+    <header class="main-header">
+      <nav>
+        <div class="nav-head">
+          <div class="logo">Header Logo</div>
+          <div>header link one</div>
+          <div>header link two</div>
+          <div>header link three</div>
+        </div>
+      </nav>
+      <section class="main-body">
+        <div class="main-div">
+          <div>
+            <h2 class="head-1">This website is awesome</h2>
 
-              <p class="first-paragraph">
-                This website has some subtext that goes here under the main
-                title.it's a smaller font and the color is lower contrast
-              </p>
-              <button>Sign up</button>
-            </div>
-            <div class="placeholder">
-              <img src="pexels.jpeg" class="img" /> this is a placeholder for an
-              image
-            </div>
+            <p class="first-paragraph">
+              This website has some subtext that goes here under the main
+              title.it's a smaller font and the color is lower contrast
+            </p>
+            <button>Sign up</button>
           </div>
-        </section>
-      </header>
-    </div>
+          <div class="placeholder">
+            <img src="pp3.webp" class="img" /> this is a placeholder for an
+            image
+          </div>
+        </div>
+      </section>
+    </header>
+    <article>
+      <section class="section2">
+        <h3 class="head-2">Some random information.</h3>
+        <div class="section-2">
+          <div class="img-div">
+            <img src="pp2.webp" class="section-img" />
+            <p>A state of the art microchip embeded in the robotwatch</p>
+          </div>
+          <div class="img-div">
+            <img src="pp4.jpeg" class="section-img" />
+            <p>A state of the art Desktop with the latest nano technology</p>
+          </div>
+
+          <div class="img-div">
+            <img src="pp6.webp" class="section-img" />
+            <p>A state of the art microchip embeded in the robotwatch</p>
+          </div>
+          <div class="img-div">
+            <img src="pp1.webp" class="section-img" />
+            <p>A state of the art microchip embeded in the robotwatch</p>
+          </div>
+        </div>
+      </section>
+    </article>
   </body>
 </html>
