--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Document</title>
   </head>
   <body>
-    < class="container">
+    <!-- <div class="container"> -->
     <header class="main-header">
       <nav>
         <div class="nav-head">
@@ -40,13 +40,15 @@
             <img src="pp3.webp" class="img" /> this is a placeholder for an
             image
           </div>
-        </div>
-      </section>
-    </header>
-    <article>
-      <section class="section2">
-        <h3 class="head-2">Some random information.</h3>
-        <div class="section-2">
+        </section>
+      </header>
+    </div>
+      <article >
+        
+
+        <section class="section2 ">
+          <h3 class="head-2">Some random information.</h3>
+          <div class="section-2">
           <div class="img-div">
             <img src="pp2.webp" class="section-img" />
             <p>A state of the art microchip embeded in the robotwatch</p>
@@ -65,7 +67,21 @@
             <p>A state of the art microchip embeded in the robotwatch</p>
           </div>
         </div>
+      
       </section>
+      <div class="testimonial">
+
+        <blockquote class="testimonial-text">
+          Stratosphere Networks has provided unmatchable customer service with a
+          tremendous quality of service that has resulted in minimized downtime
+          and disruption. We have peace of mind knowing there is a large team of
+          experts behind us, guaranteeing high levels of service and solutions
+          that give our business a competitive edge.
+        </blockquote>
+        <p class="testimonial-author">-Operations Manager, Mechanical Engineering Client
+
+   </p>
+      </div>
     </article>
   </body>
 </html>
